Login to Ion
Moving Iolite to Ion API